[gd_scene load_steps=8 format=3 uid="uid://dw6ru3xd6qtcg"]

[ext_resource type="PackedScene" uid="uid://dq8rs7i7dfs6g" path="res://tower.tscn" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://dblu3le01d2kv" path="res://game.gd" id="1_lquwl"]
[ext_resource type="PackedScene" uid="uid://bsp7da0odftl" path="res://shark.tscn" id="3_h2yge"]
[ext_resource type="Script" uid="uid://bvcfp37t3118d" path="res://spawner.gd" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://drj43bp1iulk3" path="res://big_shark.tscn" id="5_lquwl"]
[ext_resource type="Script" uid="uid://bil7rx0kxjnkd" path="res://detector.gd" id="6_7mycd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(203, 640)

[node name="Main" type="Node2D"]
script = ExtResource("1_lquwl")

[node name="Tower" parent="." instance=ExtResource("1_1bvp3")]
position = Vector2(60, 247)
collision_layer = 2
collision_mask = 2

[node name="Spawner" type="Marker2D" parent="."]
position = Vector2(1218, 258)
script = ExtResource("4_1bvp3")
enemy_types = Array[PackedScene]([ExtResource("3_h2yge"), ExtResource("5_lquwl")])

[node name="Detector" type="Area2D" parent="."]
script = ExtResource("6_7mycd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(-213, 323)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FishThroughLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 36.0
offset_top = 45.0
offset_right = 294.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 32
text = "Shark through: 0"

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -158.0
offset_top = 45.0
offset_right = -37.0
offset_bottom = 90.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="GameOverLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -44.0
offset_right = 206.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Game OverÔºÅ"
metadata/_edit_use_anchors_ = true

[node name="TestShark" parent="." instance=ExtResource("3_h2yge")]
position = Vector2(370, 444)

[connection signal="shark_died" from="Spawner" to="." method="_on_update_point"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="Detector" to="Detector" method="_on_body_entered"]
